init fork project from react material ui starter trying stuff out mostly

--- a/package.json
+++ b/package.json
@@ -25,11 +25,7 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -37,5 +33,5 @@
     ]
   },
   "keywords": [],
-  "description": ""
+  "description": "fun project by TJB"
 }
